sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:10: error: type mismatch;
 found   : Unit
 required: Boolean
      if (ecart=9) {
               ^AlgCombSort11:13: error: type mismatch;
 found   : Unit
 required: Boolean
       else if(ecart=10) {
                    ^