sort.basic.comb.AlgCombSort11.scala.code
def combSort11()  {
  var ecart=getNombreValeurs()
  var nb=false
  var n=getNombreValeurs()
  do{
    nb=false
    if(ecart > 1){
      ecart=(ecart.toDouble/1.3).toInt
      if (ecart=9) {
        ecart==11
      }
       else if(ecart=10) {
         ecart=11
       }
      }
    
    var i=0
    while(i+ecart < n){
      if(plusPetit(i+ecart,i)){
        echange(i,i+ecart)
        
        nb=true
      }
      i=i+1
    }
  }
  while(ecart >1 || nb)
}
